--- a/Main/Application/templates/Application/base.html
+++ b/Main/Application/templates/Application/base.html
@@ -43,6 +43,24 @@
 
     {% block content %}{% endblock %}
 
+    <footer id="section-footer" class="container-fluid">
+        <img class="footer-logo" src="{% static 'images/favicon.png' %}" alt="">
+        <h1 class="footer-heading">Quick Links</h1>
+        <div class="footer-item">
+            <a class="footer-link" href="">Courses</a>
+            <a class="footer-link" href="">Live Classes</a>
+            <a class="footer-link" href="">State Boards</a>
+            <a class="footer-link" href="">Solved Books</a>
+        </div>
+        <div class="footer-item1">
+            <a class="footer-link1" href="">NEET</a>
+            <a class="footer-link1" href="">ICSE</a>
+            <a class="footer-link1" href="">NCERT</a>
+            <a class="footer-link1" href="">CBSE</a>
+            <a class="footer-link1" href="">JEE</a>
+        </div>
+    </footer>
+
     <footer id="section-footer1" class="container-fluid">
         <div class="footer1-connect">
             <h3 class="footer1-connect--text">Connect with us 
