--- a/Main/Application/templates/Application/base.html
+++ b/Main/Application/templates/Application/base.html
@@ -59,6 +59,29 @@
             <a class="footer-link1" href="">CBSE</a>
             <a class="footer-link1" href="">JEE</a>
         </div>
+        <div class="footer">
+
+            <h1 class="footer__heading">Contact:</h1>
+
+            <div class="footer__box">
+                <div class="footer__box--call">
+                    <img class="footer__box--call-img" src="{% static 'images/phone.png' %}" alt="">
+                    <p class="footer__box--call-para">Coursify@gmail.com</p>
+                </div>
+    
+                <div class="footer__box--social">
+                    <img class="footer__box--social-img" src="{% static 'images/facebook.png' %}" alt="">
+                    <img class="footer__box--social-img" src="{% static 'images/instagram.png' %}" alt="">
+                    <img class="footer__box--social-img" src="{% static 'images/youtube.png' %}" alt="">
+                    <img class="footer__box--social-img" src="{% static 'images/linkedin.png' %}" alt="">
+                </div>
+    
+                <div class="footer__box--call fbox-call">
+                    <img class="footer__box--call-img" src="{% static 'images/email.png' %}" alt="">
+                    <p class="footer__box--call-para">Coursify@gmail.com</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <footer id="section-footer1" class="container-fluid">
