--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -1333,8 +1333,6 @@ body {
     transform: translateX(-50%);
     left: 50%;
     column-gap: 15%; }
-    .expert__content .t3 {
-      display: none; }
     .expert__content--box {
       width: 100%;
       display: grid;
@@ -1716,7 +1714,39 @@ body {
       font-family: 'Poppins',sans-serif;
       font-weight: 700;
       color: #4B4B4B;
-      font-size: 2.3rem; } }
+      font-size: 2.3rem; }
+  .footer {
+    margin-top: 5rem; }
+    .footer__heading {
+      margin-bottom: 2rem;
+      font-family: 'Poppins',sans-serif;
+      font-size: 3rem;
+      font-weight: 800;
+      margin-top: 4rem;
+      color: #D60B3C;
+      text-align: center; }
+    .footer__box {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      justify-items: center; }
+      .footer__box--call {
+        color: #4B4B4B;
+        font-family: 'Poppins',sans-serif;
+        font-weight: 600; }
+        .footer__box--call-img {
+          display: inline;
+          width: 3rem;
+          margin-right: 1rem; }
+        .footer__box--call-para {
+          display: inline;
+          font-size: 1.5rem; }
+      .footer__box--social {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        column-gap: 3rem; }
+        .footer__box--social-img {
+          width: 3rem; } }
 
 @media only screen and (max-width: 37.5em) {
   .footer-item1 {
@@ -1724,13 +1754,27 @@ body {
   .footer-item {
     width: 100%; }
   .footer-logo {
-    width: 40%; } }
+    width: 40%; }
+  .footer__box {
+    grid-template-columns: repeat(2, 1fr); }
+    .footer__box--social {
+      grid-row: 2 / 3;
+      grid-column: 1 / 3;
+      margin-top: 4rem; } }
 
 @media only screen and (max-width: 30em) {
   .footer-item1 .footer-link1 {
     font-size: 1.35rem; }
   .footer-item .footer-link {
-    font-size: 1.35rem; } }
+    font-size: 1.35rem; }
+  .footer__box {
+    grid-template-columns: 100%; }
+    .footer__box--social {
+      grid-row: 3 / 4;
+      grid-column: 1 / 3;
+      margin-top: 4rem; }
+    .footer__box .fbox-call {
+      grid-row: 2 / 3; } }
 
 .free-heading {
   text-align: center;
