--- a/Main/Application/templates/Application/board.html
+++ b/Main/Application/templates/Application/board.html
@@ -23,20 +23,32 @@
             <div class="state__names">
                 <button class="state__names--btn">Bihar</button>
                 <button class="state__names--btn">Uttar Pradesh</button>
-                <button class="state__names--btn">Jammu & Kashmir</button>
-                <button class="state__names--btn">Delhi</button>
-                <button class="state__names--btn">Punjab</button>
-                <button class="state__names--btn">Harayana</button>
-                <button class="state__names--btn">Chhattisgarh</button>
+                <button class="state__names--btn">Andhra Pradesh</button>
+                <button class="state__names--btn">Maharashtra</button>
+                <button class="state__names--btn">Gujarat</button>
+                <button class="state__names--btn">Rajasthan</button>
+                <button class="state__names--btn">West Bengal</button>
                 <button class="state__names--btn">Madhya Pradesh</button>
-                <button class="state__names--btn">Arynachal Pradesh</button>
-                <button class="state__names--btn">Uttrakhand</button>
+                <button class="state__names--btn">Karnataka</button>
+                <button class="state__names--btn">Tamil Nadu</button>
+            </div>
+            <div class="state__names1">
+                <h3 class="state__names1--title">Choose your State</h3>
+                <button class="state__names1--btn">Uttar Pradesh</button>
+                <button class="state__names1--btn">Bihar</button>
+                <button class="state__names1--btn">Madhya Pradesh</button>
+                <button class="state__names1--btn">Rajasthan</button>
+                <button class="state__names1--btn">Maharashtra</button>
+                <button class="state__names1--btn">Gujarat</button>
+                <button class="state__names1--btn">West Bengal</button>
+                <button class="state__names1--btn">Tamil Nadu</button>
+                <button class="state__names1--btn">Andhra Pradesh</button>
+                <button class="state__names1--btn">Karnataka</button>
             </div>
             <div class="class">
                 <h2 class="heading">Class 12</h2>
                 <div class="class__content">
                     <h3 class="class__content--heading">Maths</h3>
-                    <button class="class__content--btn">View all</button>
                     <div class="class__content--box">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/12TH/918O3XZAW9L.jpg' %}" alt="">
@@ -59,6 +71,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <button class="class__content--btn">View all</button>
                             <img class="class__content--box-item-img" src="{% static 'books/12TH/9788131521540.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -67,7 +80,6 @@
                 </div>
                 <div class="class__content">
                     <h3 class="class__content--heading">Physics</h3>
-                    <button class="class__content--btn">View all</button>
                     <div class="class__content--box">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/911-2v5Yq8L.jpg' %}" alt="">
@@ -90,6 +102,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <button class="class__content--btn">View all</button>
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/EXMPLAR.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -98,7 +111,6 @@
                 </div>
                 <div class="class__content">
                     <h3 class="class__content--heading">Chemistry</h3>
-                    <button class="class__content--btn">View all</button>
                     <div class="class__content--box">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/12TH/91DKzsw46IL.jpg' %}" alt="">
@@ -121,6 +133,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <button class="class__content--btn">View all</button>
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/A1-k8aBzP-L.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -129,7 +142,6 @@
                 </div>
                 <div class="class__content">
                     <h3 class="class__content--heading">Biology</h3>
-                    <button class="class__content--btn">View all</button>
                     <div class="class__content--box">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/12TH/91kkk-xBuOL.jpg' %}" alt="">
@@ -152,6 +164,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <button class="class__content--btn">View all</button>
                             <img class="class__content--box-item-img" src="{% static 'books/10TH/71004LmJdgL.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -162,7 +175,6 @@
                 <img class="state-img1" src="{% static 'images/ellipses.png' %}" alt="">
                 <div class="class__content">
                     <h3 class="class__content--heading">Maths</h3>
-                    <button class="class__content--btn">View all</button>
                     <div class="class__content--box">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/unnamed.jpg' %}" alt="">
@@ -185,6 +197,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <button class="class__content--btn">View all</button>
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/CNGAGE.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -193,7 +206,6 @@
                 </div>
                 <div class="class__content">
                     <h3 class="class__content--heading">Physics</h3>
-                    <button class="class__content--btn">View all</button>
                     <div class="class__content--box">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/911-2v5Yq8L.jpg' %}" alt="">
@@ -216,6 +228,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <button class="class__content--btn">View all</button>
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/EXMPLAR.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -224,7 +237,6 @@
                 </div>
                 <div class="class__content">
                     <h3 class="class__content--heading">Chemistry</h3>
-                    <button class="class__content--btn">View all</button>
                     <div class="class__content--box">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/12TH/91DKzsw46IL.jpg' %}" alt="">
@@ -247,6 +259,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <button class="class__content--btn">View all</button>
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/A1-k8aBzP-L.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -255,7 +268,6 @@
                 </div>
                 <div class="class__content">
                     <h3 class="class__content--heading">Biology</h3>
-                    <button class="class__content--btn">View all</button>
                     <div class="class__content--box">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/11TH/71GhcCJ76gL._SY679_.jpg' %}" alt="">
@@ -278,6 +290,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <button class="class__content--btn">View all</button>
                             <img class="class__content--box-item-img" src="{% static 'books/10TH/71004LmJdgL.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -287,8 +300,7 @@
                 <h2 class="heading">Class 10</h2>
                 <div class="class__content">
                     <h3 class="class__content--heading">Maths</h3>
-                    <h3 class="class__content--heading" style="position: absolute;top:0rem;left:40%;">Science</h3>
-                    <div class="class__content--box">
+                    <div class="class__content--box sbx">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/10TH/91fPVAIKXeL.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
@@ -300,6 +312,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <h3 class="class__content--heading" style="position: absolute;top:-6rem;">Science</h3>
                             <img class="class__content--box-item-img" src="{% static 'books/10TH/91gcjeazhvL.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -313,8 +326,7 @@
                     <h2 class="heading">Class 9</h2>
                 <div class="class__content">
                     <h3 class="class__content--heading">Maths</h3>
-                    <h3 class="class__content--heading" style="position: absolute;top:0rem;left:40%;">Science</h3>
-                    <div class="class__content--box">
+                    <div class="class__content--box sbx">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/9TH/book7.png' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
@@ -326,6 +338,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <h3 class="class__content--heading" style="position: absolute;top:-6rem;">Science</h3>
                             <img class="class__content--box-item-img" src="{% static 'books/9TH/91PUaUX3nRL.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -341,9 +354,8 @@
                 <img class="state-img2" src="{% static 'images/ellipses.png' %}" alt="">
                 <div class="class__content">
                     <h3 class="class__content--heading">Maths</h3>
-                    <h3 class="class__content--heading" style="position: absolute;top:0rem;left:40%;">Science</h3>
-                    <div class="class__content--box">
-                        <div class="class__content--box-item">
+                    <div class="class__content--box sbx">
+                        <div class="class__content--box-item sbx">
                             <img class="class__content--box-item-img" src="{% static 'books/8TH/unnamed.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -354,6 +366,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <h3 class="class__content--heading" style="position: absolute;top:-6rem;">Science</h3>
                             <img class="class__content--box-item-img" src="{% static 'books/8TH/61RFleAKgqL.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -369,8 +382,7 @@
                 <img class="state-img3" src="{% static 'images/ellipses.png' %}" alt="">
                 <div class="class__content">
                     <h3 class="class__content--heading">Maths</h3>
-                    <h3 class="class__content--heading" style="position: absolute;top:0rem;left:40%;">Science</h3>
-                    <div class="class__content--box">
+                    <div class="class__content--box sbx">
                         <div class="class__content--box-item">
                             <img class="class__content--box-item-img" src="{% static 'books/7TH/512Jxme8PAL._SX379_BO1,204,203,200_.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
@@ -382,6 +394,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <h3 class="class__content--heading" style="position: absolute;top:-6rem;">Science</h3>
                             <img class="class__content--box-item-img" src="{% static 'books/7TH/91uCg1fC4fL.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -396,9 +409,8 @@
                 <h2 class="heading">Class 6</h2>
                 <div class="class__content">
                     <h3 class="class__content--heading">Maths</h3>
-                    <h3 class="class__content--heading" style="position: absolute;top:0rem;left:40%;">Science</h3>
-                    <div class="class__content--box">
-                        <div class="class__content--box-item">
+                    <div class="class__content--box sbx">
+                        <div class="class__content--box-item sbx">
                             <img class="class__content--box-item-img" src="{% static 'books/6TH/911gWcgY1YL.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
@@ -409,6 +421,7 @@
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
                         </div>
                         <div class="class__content--box-item">
+                            <h3 class="class__content--heading" style="position: absolute;top:-6rem;">Science</h3>
                             <img class="class__content--box-item-img" src="{% static 'books/6TH/91f4O+-Mb-L.jpg' %}" alt="">
                             <button class="class__content--box-item-btn">Solve Now</button>
                             <h3 class="class__content--box-item-title">NCERT - XII</h3>
