--- a/Main/Application/templates/Application/previousyear.html
+++ b/Main/Application/templates/Application/previousyear.html
@@ -13,6 +13,15 @@
             <button onclick="location.href={% url 'neet' %}" class="exams__names--btn">NEET</button>
             <button onclick="location.href={% url 'previousyear' %}" class="exams__names--btn" style="color: white;background-color:#D60B3C;">Previous Year Q's</button>
         </div>
+        <div class="exams__names1">
+            <h1 class="exams__names1--title">Choose your goal</h1>
+            <button onclick="location.href={% url 'boardexams' %}" class="exams__names1--btn" >Board Exams</button>
+            <button onclick="location.href={% url 'schoolexams' %}" class="exams__names1--btn" >School exams</button>
+            <button onclick="location.href={% url 'jeemain' %}" class="exams__names1--btn">JEE - Mains</button>
+            <button onclick="location.href={% url 'jeeadvance' %}" class="exams__names1--btn">JEE - Advanced</button>
+            <button onclick="location.href={% url 'neet' %}" class="exams__names1--btn" >NEET</button>
+            <button onclick="location.href={% url 'previousyear' %}" class="exams__names1--btn" style="color: white;background-color:#D60B3C;" >Previous Year Q's</button>
+        </div>
         <div class="examination">
             <h2 class="heading">State Boards</h2>
             <div class="examination__content">
@@ -137,7 +146,6 @@
             <div class="examination__content">
                 <img class="state-img3" src="{% static 'images/ellipses.png' %}" alt="">
                 <h3 class="examination__content--heading">CBSE</h3>
-                <button class="examination__content--btn">View all</button>
                 <div class="examination__content--box">
                     <div class="examination__content--box-item">
                         <img class="examination__content--box-item-img" src="{% static 'books/12TH/91DKzsw46IL.jpg' %}" alt="">
@@ -160,6 +168,7 @@
                         <h3 class="examination__content--box-item-title">NCERT - XII</h3>
                     </div>
                     <div class="examination__content--box-item">
+                        <button class="examination__content--btn">View all</button>
                         <img class="examination__content--box-item-img" src="{% static 'books/11TH/A1-k8aBzP-L.jpg' %}" alt="">
                         <button class="examination__content--box-item-btn">Solve Now</button>
                         <h3 class="examination__content--box-item-title">NCERT - XII</h3>
@@ -168,7 +177,6 @@
             </div>
             <div class="examination__content">
                 <h3 class="examination__content--heading">CBSE</h3>
-                <button class="examination__content--btn">View all</button>
                 <div class="examination__content--box">
                     <div class="examination__content--box-item">
                         <img class="examination__content--box-item-img" src="{% static 'books/12TH/91DKzsw46IL.jpg' %}" alt="">
@@ -191,6 +199,7 @@
                         <h3 class="examination__content--box-item-title">NCERT - XII</h3>
                     </div>
                     <div class="examination__content--box-item">
+                        <button class="examination__content--btn">View all</button>
                         <img class="examination__content--box-item-img" src="{% static 'books/11TH/A1-k8aBzP-L.jpg' %}" alt="">
                         <button class="examination__content--box-item-btn">Solve Now</button>
                         <h3 class="examination__content--box-item-title">NCERT - XII</h3>
@@ -200,7 +209,6 @@
             <h2 class="heading">Competitive Exams</h2>
             <div class="examination__content">
                 <h3 class="examination__content--heading">Engineering</h3>
-                <h3 class="class__content--heading" style="position: absolute;top:0rem;left:40%;">Medicle</h3>
                 <div class="examination__content--box">
                     <div class="examination__content--box-item">
                         <img class="examination__content--box-item-img" src="{% static 'books/12TH/91DKzsw46IL.jpg' %}" alt="">
@@ -213,6 +221,7 @@
                         <h3 class="examination__content--box-item-title">NCERT - XII</h3>
                     </div>
                     <div class="examination__content--box-item">
+                        <h3 class="class__content--heading" style="position: absolute;top:-6rem;">Medicle</h3>
                         <img class="examination__content--box-item-img" src="{% static 'books/12TH/413THTvmAvL._SX324_BO1,204,203,200_.jpg' %}" alt="">
                         <button class="examination__content--box-item-btn">Solve Now</button>
                         <h3 class="examination__content--box-item-title">NCERT - XII</h3>
