--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -1123,6 +1123,8 @@ body {
   display: grid;
   grid-template-columns: 17% 83%;
   column-gap: 6rem; }
+  .exams__names1 {
+    display: none; }
   .exams__names {
     display: grid;
     grid-template-rows: repeat(10, 4.5rem); }
@@ -1151,8 +1153,9 @@ body {
         outline: none; }
 
 .examination {
-  width: 85%; }
+  width: 100%; }
   .examination .heading {
+    width: 90%;
     margin-top: 4rem;
     padding-bottom: 1.5rem;
     font-size: 3rem;
@@ -1167,10 +1170,11 @@ body {
       font-size: 2.5rem;
       font-family: 'Poppins',sans-serif;
       color: #4B4B4B;
-      font-weight: 700; }
+      font-weight: 700;
+      margin-top: 3rem; }
     .examination__content--btn {
-      right: 4%;
-      top: .5rem;
+      right: 2%;
+      top: -2.5rem;
       position: absolute;
       font-size: 1.5rem;
       color: white;
@@ -1182,28 +1186,25 @@ body {
         outline: none; }
     .examination__content--box {
       display: grid;
-      grid-template-columns: repeat(5, 13%) 10%;
-      column-gap: 7.5rem;
-      margin-bottom: 5rem; }
+      grid-template-columns: repeat(5, 13%);
+      column-gap: 4.5rem; }
       .examination__content--box-item {
-        position: relative;
-        width: 20rem; }
+        position: relative; }
         .examination__content--box-item-img {
           transform: translateY(1rem);
-          width: 16rem;
-          height: 22rem;
+          width: 100%;
+          height: 20rem;
           margin-bottom: 2rem;
           border-radius: .5rem; }
         .examination__content--box-item-btn {
           position: absolute;
-          bottom: 3.5rem;
+          bottom: 2.2rem;
           left: 50%;
-          transform: translateX(-65%) translateY(1rem);
+          transform: translateX(-50%);
           background-color: #D60B3C;
           color: white;
           border: none;
-          padding: .2rem 3rem;
-          width: fit-content;
+          width: 90%;
           font-size: 1.5rem;
           border-radius: .5rem; }
           .examination__content--box-item-btn:focus, .examination__content--box-item-btn:active {
@@ -1211,13 +1212,128 @@ body {
         .examination__content--box-item-title {
           position: relative;
           left: 50%;
-          transform: translate(-59%, 0.6rem);
-          font-size: 1.5rem;
+          transform: translateX(-50%);
+          font-size: 1.4rem;
           font-family: 'Roboto',sans-serif;
           font-weight: 500;
           color: #1E4190;
           text-align: center;
           justify-self: center; }
+
+@media only screen and (max-width: 56.25em) {
+  .exams {
+    grid-template-columns: 100%; }
+    .exams__names {
+      display: none; }
+    .exams__names1 {
+      display: block;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      justify-items: center;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 73%; }
+      .exams__names1--title {
+        margin-top: 2rem;
+        font-size: 3.5rem;
+        color: #4B4B4B;
+        font-family: 'Poppins',sans-serif;
+        font-weight: 700;
+        text-align: center;
+        grid-column: 1 / -1;
+        margin-bottom: 3rem; }
+      .exams__names1--btn {
+        border: 0.1rem #4B4B4B solid;
+        font-size: 2rem;
+        background-color: transparent;
+        color: #DE0B38;
+        font-family: 'Poppins',sans-serif;
+        font-weight: 700;
+        padding: .3rem 2.5rem;
+        border-radius: 20rem;
+        margin-bottom: 2rem; }
+        .exams__names1--btn:nth-child(9) {
+          grid-column: 2 / 3;
+          grid-row: 4 / 5; }
+        .exams__names1--btn:nth-child(10) {
+          grid-column: 3 / 4;
+          grid-row: 4 / 5; }
+        .exams__names1--btn:hover, .exams__names1--btn:focus, .exams__names1--btn:active {
+          color: white;
+          outline: none;
+          background-color: #DE0B38; }
+  .examination .heading {
+    position: relative;
+    left: 50%;
+    width: 85%;
+    transform: translateX(-50%); }
+  .examination__content--heading {
+    position: relative;
+    left: 10%; }
+  .examination__content--box {
+    justify-content: center;
+    justify-self: center !important; } }
+
+@media only screen and (max-width: 50em) {
+  .exams__names1 {
+    width: 95%; }
+  .examination .heading {
+    width: 90%; }
+  .examination__content {
+    width: 90%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%); }
+    .examination__content--heading {
+      left: 1.5%; }
+    .examination__content--box {
+      margin-left: 1rem;
+      column-gap: 1.5rem;
+      grid-template-columns: repeat(5, 1fr); } }
+
+@media only screen and (max-width: 37.5em) {
+  .exams__names1 {
+    width: 100%; }
+    .exams__names1--btn {
+      font-size: 1.6rem; }
+  .examination .heading {
+    width: 99%; }
+  .examination__content {
+    width: 98%; } }
+
+@media only screen and (max-width: 30em) {
+  .exams__names1 {
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr); }
+    .exams__names1--btn {
+      font-size: 1.4rem; }
+  .examination__content .sbx {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem; }
+    .examination__content .sbx .class__content--box-item:nth-child(4) {
+      grid-column: 2 / 3 !important;
+      margin-top: 5rem;
+      width: 100%; }
+    .examination__content .sbx .class__content--box-item:nth-child(3) {
+      grid-column: 1 / 2 !important;
+      margin-top: 5rem; }
+  .examination__content--box {
+    grid-template-columns: repeat(3, 1fr); }
+    .examination__content--box-item:nth-child(4) {
+      grid-column: 1 / 3;
+      width: 45%;
+      justify-self: center;
+      grid-row: 2 / 3; }
+    .examination__content--box-item:nth-child(5) {
+      grid-column: 2 / 4;
+      width: 45%;
+      justify-self: center;
+      grid-row: 2 / 3; }
+  .examination__content--btn {
+    position: absolute;
+    top: -27rem;
+    right: -50%; } }
 
 .exercise-heading {
   text-align: center;
@@ -2880,6 +2996,8 @@ body {
   display: grid;
   grid-template-columns: 17% 83%;
   column-gap: 6rem; }
+  .must__names1 {
+    display: none; }
   .must__names {
     display: grid;
     grid-template-rows: repeat(10, 4.5rem); }
@@ -2908,8 +3026,9 @@ body {
         outline: none; }
 
 .material {
-  width: 85%; }
+  width: 100%; }
   .material .heading {
+    width: 90%;
     margin-top: 4rem;
     padding-bottom: 1.5rem;
     font-size: 3rem;
@@ -2924,14 +3043,11 @@ body {
       font-size: 2.5rem;
       font-family: 'Poppins',sans-serif;
       color: #4B4B4B;
-      font-weight: 700; }
-    .material__content--subheading {
-      color: #1E4190;
-      font-family: 'Poppins',sans-serif;
-      font-style: italic; }
+      font-weight: 700;
+      margin-top: 3rem; }
     .material__content--btn {
-      right: 4%;
-      top: .5rem;
+      right: 2%;
+      top: -2.5rem;
       position: absolute;
       font-size: 1.5rem;
       color: white;
@@ -2943,28 +3059,25 @@ body {
         outline: none; }
     .material__content--box {
       display: grid;
-      grid-template-columns: repeat(5, 13%) 10%;
-      column-gap: 7.5rem;
-      margin-bottom: 5rem; }
+      grid-template-columns: repeat(5, 13%);
+      column-gap: 4.5rem; }
       .material__content--box-item {
-        position: relative;
-        width: 20rem; }
+        position: relative; }
         .material__content--box-item-img {
           transform: translateY(1rem);
-          width: 16rem;
-          height: 22rem;
+          width: 100%;
+          height: 20rem;
           margin-bottom: 2rem;
           border-radius: .5rem; }
         .material__content--box-item-btn {
           position: absolute;
-          bottom: 3.5rem;
+          bottom: 2.2rem;
           left: 50%;
-          transform: translateX(-65%) translateY(1rem);
+          transform: translateX(-50%);
           background-color: #D60B3C;
           color: white;
           border: none;
-          padding: .2rem 3rem;
-          width: fit-content;
+          width: 90%;
           font-size: 1.5rem;
           border-radius: .5rem; }
           .material__content--box-item-btn:focus, .material__content--box-item-btn:active {
@@ -2972,13 +3085,71 @@ body {
         .material__content--box-item-title {
           position: relative;
           left: 50%;
-          transform: translate(-59%, 0.6rem);
-          font-size: 1.5rem;
+          transform: translateX(-50%);
+          font-size: 1.4rem;
           font-family: 'Roboto',sans-serif;
           font-weight: 500;
           color: #1E4190;
           text-align: center;
           justify-self: center; }
+
+@media only screen and (max-width: 56.25em) {
+  .must {
+    grid-template-columns: 100%; }
+    .must__names {
+      display: none; }
+    .must .material .heading {
+      position: relative;
+      left: 50%;
+      width: 85%;
+      transform: translateX(-50%); }
+    .must .material__content--heading {
+      position: relative;
+      left: 10%; }
+    .must .material__content--box {
+      justify-content: center;
+      justify-self: center !important; } }
+
+@media only screen and (max-width: 50em) {
+  .material .heading {
+    width: 90%; }
+  .material__content {
+    width: 90%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%); }
+    .material__content--heading {
+      left: 1.5%; }
+    .material__content--box {
+      margin-left: 1rem;
+      column-gap: 1.5rem;
+      grid-template-columns: repeat(5, 1fr); } }
+
+@media only screen and (max-width: 37.5em) {
+  .material .heading {
+    width: 109%; }
+  .material__content {
+    width: 98%; }
+    .material__content--heading {
+      left: 3% !important; } }
+
+@media only screen and (max-width: 30em) {
+  .material__content--box {
+    grid-template-columns: repeat(3, 1fr); }
+    .material__content--box-item:nth-child(4) {
+      grid-column: 1 / 3;
+      width: 45%;
+      justify-self: center;
+      grid-row: 2 / 3; }
+    .material__content--box-item:nth-child(5) {
+      grid-column: 2 / 4;
+      width: 45%;
+      justify-self: center;
+      grid-row: 2 / 3; }
+  .material__content--btn {
+    position: absolute;
+    top: -27rem;
+    right: -50%; } }
 
 .navbar-brand img {
   height: 7rem;
@@ -4748,8 +4919,9 @@ nav {
         outline: none; }
 
 .class {
-  width: 70vw; }
+  width: 100%; }
   .class .heading {
+    width: 90%;
     margin-top: 4rem;
     padding-bottom: 1.5rem;
     font-size: 3rem;
@@ -4764,10 +4936,11 @@ nav {
       font-size: 2.5rem;
       font-family: 'Poppins',sans-serif;
       color: #4B4B4B;
-      font-weight: 700; }
+      font-weight: 700;
+      margin-top: 3rem; }
     .class__content--btn {
-      right: 4%;
-      top: .5rem;
+      right: 2%;
+      top: -2.5rem;
       position: absolute;
       font-size: 1.5rem;
       color: white;
@@ -4779,28 +4952,25 @@ nav {
         outline: none; }
     .class__content--box {
       display: grid;
-      grid-template-columns: repeat(5, 13%) 10%;
-      column-gap: 7.2%;
-      margin-bottom: 5rem; }
+      grid-template-columns: repeat(5, 13%);
+      column-gap: 4.5rem; }
       .class__content--box-item {
-        position: relative;
-        width: 20rem; }
+        position: relative; }
         .class__content--box-item-img {
           transform: translateY(1rem);
-          width: 83%;
-          height: 22rem;
+          width: 100%;
+          height: 20rem;
           margin-bottom: 2rem;
           border-radius: .5rem; }
         .class__content--box-item-btn {
           position: absolute;
-          bottom: 3.5rem;
+          bottom: 2.2rem;
           left: 50%;
-          transform: translateX(-65%) translateY(1rem);
+          transform: translateX(-50%);
           background-color: #D60B3C;
           color: white;
           border: none;
-          padding: .2rem 3rem;
-          width: fit-content;
+          width: 90%;
           font-size: 1.5rem;
           border-radius: .5rem; }
           .class__content--box-item-btn:focus, .class__content--box-item-btn:active {
@@ -4808,28 +4978,33 @@ nav {
         .class__content--box-item-title {
           position: relative;
           left: 50%;
-          transform: translate(-59%, 0.6rem);
-          font-size: 1.5rem;
+          transform: translateX(-50%);
+          font-size: 1.4rem;
           font-family: 'Roboto',sans-serif;
           font-weight: 500;
           color: #1E4190;
           text-align: center;
           justify-self: center; }
 
+.state__names1 {
+  display: none; }
+
 .school {
   width: fit-content;
   position: absolute;
   left: 40%;
+  z-index: 1;
   transform: translateX(-50%);
   grid-column: 1 / -1; }
   .school__btn {
-    background-color: transparent;
+    background-color: white;
     color: #1E4190;
     font-size: 3rem;
     font-weight: 700;
     padding: 0rem 10rem;
     font-family: 'Poppins',sans-serif; }
-    .school__btn:hover {
+    .school__btn:hover, .school__btn:active, .school__btn:focus {
+      outline: none;
       color: white;
       background-color: #DE0B38; }
 
@@ -4847,27 +5022,25 @@ nav {
       font-weight: 700; }
     .class1__content--box {
       display: grid;
-      grid-template-columns: repeat(5, 13%) 10%;
-      column-gap: 6rem;
-      margin-bottom: 5rem; }
+      grid-template-columns: repeat(5, 13%);
+      column-gap: 4.5rem; }
       .class1__content--box-item {
         position: relative; }
         .class1__content--box-item-img {
           transform: translateY(1rem);
-          width: 16rem;
-          height: 21rem;
+          width: 100%;
+          height: 20rem;
           margin-bottom: 2rem;
           border-radius: .5rem; }
         .class1__content--box-item-btn {
           position: absolute;
-          bottom: 3.5rem;
+          bottom: 2.2rem;
           left: 50%;
-          transform: translateX(-41%) translateY(1rem);
+          transform: translateX(-50%);
           background-color: #D60B3C;
           color: white;
           border: none;
-          padding: .2rem 3rem;
-          width: fit-content;
+          width: 90%;
           font-size: 1.5rem;
           border-radius: .5rem; }
           .class1__content--box-item-btn:focus, .class1__content--box-item-btn:active {
@@ -4875,13 +5048,170 @@ nav {
         .class1__content--box-item-title {
           position: relative;
           left: 50%;
-          transform: translate(-42%, 0.6rem);
-          font-size: 1.5rem;
+          transform: translateX(-50%);
+          font-size: 1.3rem;
           font-family: 'Roboto',sans-serif;
           font-weight: 500;
           color: #1E4190;
           text-align: center;
           justify-self: center; }
+
+@media only screen and (max-width: 76em) {
+  .class1 {
+    width: 85%;
+    position: relative;
+    left: 55%; } }
+
+@media only screen and (max-width: 56.25em) {
+  .state {
+    grid-template-columns: 100%; }
+    .state__names {
+      display: none; }
+    .state__names1 {
+      display: block;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      justify-items: center;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%; }
+      .state__names1--title {
+        margin-top: 2rem;
+        font-size: 3.5rem;
+        color: #4B4B4B;
+        font-family: 'Poppins',sans-serif;
+        font-weight: 700;
+        text-align: center;
+        grid-column: 1 / -1;
+        margin-bottom: 3rem; }
+      .state__names1--btn {
+        border: 0.1rem #4B4B4B solid;
+        font-size: 2rem;
+        background-color: transparent;
+        color: #DE0B38;
+        font-family: 'Poppins',sans-serif;
+        font-weight: 700;
+        padding: .3rem 1rem;
+        border-radius: 20rem;
+        margin-bottom: 2rem; }
+        .state__names1--btn:nth-child(9) {
+          grid-column: 2 / 3;
+          grid-row: 4 / 5; }
+        .state__names1--btn:nth-child(10) {
+          grid-column: 3 / 4;
+          grid-row: 4 / 5; }
+        .state__names1--btn:hover, .state__names1--btn:focus, .state__names1--btn:active {
+          color: white;
+          outline: none;
+          background-color: #DE0B38; }
+  .school {
+    left: 50%; }
+  .class .heading {
+    position: relative;
+    left: 50%;
+    width: 85%;
+    transform: translateX(-50%); }
+  .class__content--heading {
+    position: relative;
+    left: 10%; }
+  .class__content--box {
+    justify-content: center;
+    justify-self: center !important; }
+  .class1 {
+    width: 90%;
+    left: 50%; }
+    .class1__content--box {
+      grid-template-columns: repeat(5, 1fr);
+      justify-content: center;
+      justify-self: center !important; } }
+
+@media only screen and (max-width: 50em) {
+  .state__names1 {
+    width: 100%; }
+    .state__names1--btn {
+      font-size: 1.7rem; }
+  .class .heading {
+    width: 90%; }
+  .class__content {
+    width: 90%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%); }
+    .class__content--heading {
+      left: 1.5%; }
+    .class__content--box {
+      margin-left: 1rem;
+      column-gap: 1.5rem;
+      grid-template-columns: repeat(5, 1fr); }
+  .class1 {
+    width: 100%; }
+    .class1__content--box {
+      column-gap: 2.5rem; } }
+
+@media only screen and (max-width: 37.5em) {
+  .state__names1 {
+    width: 100%;
+    grid-template-columns: repeat(3, 1fr); }
+    .state__names1--btn {
+      font-size: 1.7rem; }
+      .state__names1--btn:nth-child(10) {
+        grid-row: 5 / 6;
+        grid-column: 2 / 3; }
+  .class .heading {
+    width: 99%; }
+  .class__content {
+    width: 98%; } }
+
+@media only screen and (max-width: 30em) {
+  .state__names1 {
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr); }
+    .state__names1--btn {
+      font-size: 1.7rem; }
+      .state__names1--btn:nth-child(10) {
+        grid-row: 5 / 6;
+        grid-column: 2 / 3; }
+  .school__btn {
+    padding: .3rem 3rem; }
+  .class__content .sbx {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem; }
+    .class__content .sbx .class__content--box-item:nth-child(4) {
+      grid-column: 2 / 3 !important;
+      margin-top: 5rem;
+      width: 100%; }
+    .class__content .sbx .class__content--box-item:nth-child(3) {
+      grid-column: 1 / 2 !important;
+      margin-top: 5rem; }
+  .class__content--box {
+    grid-template-columns: repeat(3, 1fr); }
+    .class__content--box-item:nth-child(4) {
+      grid-column: 1 / 3;
+      width: 45%;
+      justify-self: center;
+      grid-row: 2 / 3; }
+    .class__content--box-item:nth-child(5) {
+      grid-column: 2 / 4;
+      width: 45%;
+      justify-self: center;
+      grid-row: 2 / 3; }
+  .class__content--btn {
+    position: absolute;
+    top: -27rem;
+    right: -50%; }
+  .class1__content--box {
+    grid-template-columns: repeat(3, 1fr); }
+    .class1__content--box-item:nth-child(4) {
+      grid-column: 1 / 3;
+      width: 45%;
+      justify-self: center;
+      grid-row: 2 / 3; }
+    .class1__content--box-item:nth-child(5) {
+      grid-column: 2 / 4;
+      width: 45%;
+      justify-self: center;
+      grid-row: 2 / 3; } }
 
 .sub {
   width: 80%;
